--- a/analytics/templates/analytics/base.html
+++ b/analytics/templates/analytics/base.html
@@ -19,8 +19,8 @@
                     </div>
                     {% endif %}
                 </div>
-                <h4>{{request.user.first_name}} {{request.user.last_name}}</h4>
-                <p>{{ request.user.account_type }} Account</p>
+                <h4>{{request.user.get_full_name}}</h4>
+                <p>{{ request.user.username }}</p>
             </div>
             <div class="user-menu">
                 <div class="user-menu-inner has-slimscroll">
@@ -43,6 +43,13 @@
                                 <a href="{% url 'analytics:post-list' %}">
                                     <i data-feather="book"></i>
                                     <span>Posts</span>
+                                </a>
+                            </li>
+
+                            <li data-section="security" {% if 'skeleton/post/list/' in request.path %} class="is-active" {% endif %}>
+                                <a href="{% url 'analytics:skeleton-post-list' %}">
+                                    <i data-feather="book"></i>
+                                    <span>Skeleton Posts</span>
                                 </a>
                             </li>
                             
