--- a/analytics/templates/analytics/post_detail.html
+++ b/analytics/templates/analytics/post_detail.html
@@ -32,54 +32,54 @@
             <div class="card-heading">
                 <div class="user-block">
                     <div class="image">
-                        <img src="/static/social_assets/img/avatars/stella.jpg" data-demo-src="/static/social_assets/img/avatars/stella.jpg" data-user-popover="2" alt="">
+                        <img src="{{object.user.get_profile_img}}" data-demo-src="{{object.user.get_profile_img}}" data-user-popover="2" alt="">
                     </div>
                     <div class="user-info">
-                        <a href="#">Stella Bergmann</a>
-                        <span class="time">{{object.timestamp}}</span>
+                        <a href="{% url 'user:friend-profile' object.user.id %}">{{object.user.get_full_name}}</a>
+                        <span class="time">{{object.user.username}}  &nbsp;&nbsp;&nbsp; - &nbsp;&nbsp;&nbsp;{{object.timestamp}}</span>
                     </div>
                 </div>
                 <!-- Right side dropdown -->
                 <!-- /partials/pages/feed/dropdowns/feed-post-dropdown.html -->
-                <div class="dropdown is-spaced is-right is-neutral dropdown-trigger">
-                    <div>
-                        <div class="button">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>
-                        </div>
-                    </div>
-                    <div class="dropdown-menu" role="menu">
-                        <div class="dropdown-content">
-                            <a href="#" class="dropdown-item">
-                                <div class="media">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bookmark"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path></svg>
-                                    <div class="media-content">
-                                        <h3>Bookmark</h3>
-                                        <small>Add this post to your bookmarks.</small>
-                                    </div>
-                                </div>
-                            </a>
-                            <a class="dropdown-item">
-                                <div class="media">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>
-                                    <div class="media-content">
-                                        <h3>Notify me</h3>
-                                        <small>Send me the updates.</small>
-                                    </div>
-                                </div>
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                <div class="media">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-flag"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path><line x1="4" y1="22" x2="4" y2="15"></line></svg>
-                                    <div class="media-content">
-                                        <h3>Flag</h3>
-                                        <small>In case of inappropriate content.</small>
-                                    </div>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+<!--                <div class="dropdown is-spaced is-right is-neutral dropdown-trigger">-->
+<!--                    <div>-->
+<!--                        <div class="button">-->
+<!--                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"></circle><circle cx="12" cy="5" r="1"></circle><circle cx="12" cy="19" r="1"></circle></svg>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                    <div class="dropdown-menu" role="menu">-->
+<!--                        <div class="dropdown-content">-->
+<!--                            <a href="#" class="dropdown-item">-->
+<!--                                <div class="media">-->
+<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bookmark"><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path></svg>-->
+<!--                                    <div class="media-content">-->
+<!--                                        <h3>Bookmark</h3>-->
+<!--                                        <small>Add this post to your bookmarks.</small>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </a>-->
+<!--                            <a class="dropdown-item">-->
+<!--                                <div class="media">-->
+<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bell"><path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path><path d="M13.73 21a2 2 0 0 1-3.46 0"></path></svg>-->
+<!--                                    <div class="media-content">-->
+<!--                                        <h3>Notify me</h3>-->
+<!--                                        <small>Send me the updates.</small>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </a>-->
+<!--                            <hr class="dropdown-divider">-->
+<!--                            <a href="#" class="dropdown-item">-->
+<!--                                <div class="media">-->
+<!--                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-flag"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"></path><line x1="4" y1="22" x2="4" y2="15"></line></svg>-->
+<!--                                    <div class="media-content">-->
+<!--                                        <h3>Flag</h3>-->
+<!--                                        <small>In case of inappropriate content.</small>-->
+<!--                                    </div>-->
+<!--                                </div>-->
+<!--                            </a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <!-- Header -->
 
@@ -95,6 +95,11 @@
                     <p>
                         {{object.description}}
                     </p>
+                    {% if object.code %}
+                    <div style="background-color: #f5f5f5;border-radius: 0.5em;padding: 0.5em;margin-top: 1em;"><pre><code>
+                    {{object.code}}
+                    </code></pre></div>
+                    {% endif %}
                     <br>
                 </div>
                 <!-- Featured image -->
@@ -102,26 +107,14 @@
                     <!-- CSS masonry wrap -->
                     <div class="masonry-grid">
                         <!-- Left column -->
-                        <div class="masonry-column-left">
+                        {% if object.image1 %}
                             <a data-fancybox="post3" data-lightbox-type="comments" data-thumb="{{object.image1.url}}" href="{{object.image1.url}}">
                                 <img src="{{object.image1.url}}" data-demo-src="{{object.image1.url}}" alt="">
                             </a>
-                            <a data-fancybox="post3" data-lightbox-type="comments" data-thumb="{{object.image2.url}}" href="{{object.image2.url}}">
-                                <img src="{{object.image2.url}}" data-demo-src="{{object.image2.url}}" alt="">
-                            </a>
-                        </div>
+                        {% endif %}
+
                         <!-- Right column -->
-                        <div class="masonry-column-right">
-                            <a data-fancybox="post3" data-lightbox-type="comments" data-thumb="{{object.image3.url}}" href="{{object.image3.url}}">
-                                <img src="{{object.image3.url}}" data-demo-src="{{object.image3.url}}" alt="">
-                            </a>
-                            <a data-fancybox="post3" data-lightbox-type="comments" data-thumb="{{object.image4.url}}" href="{{object.image4.url}}">
-                                <img src="{{object.image4.url}}" data-demo-src="{{object.image4.url}}" alt="">
-                            </a>
-                            <a data-fancybox="post3" data-lightbox-type="comments" data-thumb="{{object.image5.url}}" href="{{object.image5.url}}">
-                                <img src="{{object.image5.url}}" data-demo-src="{{object.image5.url}}" alt="">
-                            </a>
-                        </div>
+
                         <!-- Post actions -->
                         <!-- /partials/pages/feed/buttons/feed-post-actions.html -->
                         <!-- <div class="like-wrapper">
@@ -138,11 +131,11 @@
                             </a>
                         </div> -->
 
-                        <div style="right: 10px;" class="fab-wrapper is-comment is-active">
-                            <a href="javascript:void(0);" class="small-fab">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-circle"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
-                            </a>
-                        </div>
+<!--                        <div style="right: 10px;" class="fab-wrapper is-comment is-active">-->
+<!--                            <a href="javascript:void(0);" class="small-fab">-->
+<!--                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-circle"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>-->
+<!--                            </a>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
@@ -151,35 +144,35 @@
             <!-- Post footer -->
             <div class="card-footer">
                 <!-- Followers -->
-                <div class="likers-group">
-                    <img src="/static/social_assets/img/avatars/rolf.jpg" data-demo-src="/static/social_assets/img/avatars/rolf.jpg" data-user-popover="13" alt="">
-                    <img src="/static/social_assets/img/avatars/mike.jpg" data-demo-src="/static/social_assets/img/avatars/mike.jpg" data-user-popover="12" alt="">
-                    <img src="/static/social_assets/img/avatars/daniel.jpg" data-demo-src="/static/social_assets/img/avatars/daniel.jpg" data-user-popover="3" alt="">
-                    <img src="/static/social_assets/img/avatars/elise.jpg" data-demo-src="/static/social_assets/img/avatars/elise.jpg" data-user-popover="6" alt="">
-                    <img src="/static/social_assets/img/avatars/david.jpg" data-demo-src="/static/social_assets/img/avatars/david.jpg" data-user-popover="4" alt="">
-                </div>
-                <div class="likers-text">
-                    <p>
-                        <a href="#">Gaelle</a>,
-                        <a href="#">Rolf</a>
-                    </p>
-                    <p>and 31 more liked this</p>
-                </div>
+<!--                <div class="likers-group">-->
+<!--                    <img src="/static/social_assets/img/avatars/rolf.jpg" data-demo-src="/static/social_assets/img/avatars/rolf.jpg" data-user-popover="13" alt="">-->
+<!--                    <img src="/static/social_assets/img/avatars/mike.jpg" data-demo-src="/static/social_assets/img/avatars/mike.jpg" data-user-popover="12" alt="">-->
+<!--                    <img src="/static/social_assets/img/avatars/daniel.jpg" data-demo-src="/static/social_assets/img/avatars/daniel.jpg" data-user-popover="3" alt="">-->
+<!--                    <img src="/static/social_assets/img/avatars/elise.jpg" data-demo-src="/static/social_assets/img/avatars/elise.jpg" data-user-popover="6" alt="">-->
+<!--                    <img src="/static/social_assets/img/avatars/david.jpg" data-demo-src="/static/social_assets/img/avatars/david.jpg" data-user-popover="4" alt="">-->
+<!--                </div>-->
+<!--                <div class="likers-text">-->
+<!--                    <p>-->
+<!--                        <a href="#">Gaelle</a>,-->
+<!--                        <a href="#">Rolf</a>-->
+<!--                    </p>-->
+<!--                    <p>and 31 more liked this</p>-->
+<!--                </div>-->
                 <!-- Post statistics -->
-                <div class="social-count">
-                    <div class="likes-count">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
-                        <span>33</span>
-                    </div>
-                    <div class="shares-count">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-link-2"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg>
-                        <span>1</span>
-                    </div>
-                    <div class="comments-count">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-circle"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>
-                        <span>9</span>
-                    </div>
-                </div>
+<!--                <div class="social-count">-->
+<!--                    <div class="likes-count">-->
+<!--                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>-->
+<!--                        <span>33</span>-->
+<!--                    </div>-->
+<!--                    <div class="shares-count">-->
+<!--                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-link-2"><path d="M15 7h3a5 5 0 0 1 5 5 5 5 0 0 1-5 5h-3m-6 0H6a5 5 0 0 1-5-5 5 5 0 0 1 5-5h3"></path><line x1="8" y1="12" x2="16" y2="12"></line></svg>-->
+<!--                        <span>1</span>-->
+<!--                    </div>-->
+<!--                    <div class="comments-count">-->
+<!--                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-circle"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg>-->
+<!--                        <span>9</span>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
             <!-- /Post footer -->
         </div>
