--- a/analytics/templates/analytics/post_list.html
+++ b/analytics/templates/analytics/post_list.html
@@ -6,6 +6,8 @@
 <h2 class="has-text-centered">
     Post List
 </h2>
+
+<a href="{% url 'analytics:post-create' %}" class="button is-solid accent-button" style="margin-left: auto;">Add Post</a>
 {% endblock title %}
 
 {% block data %}
