--- a/chat/templates/chat/chat-direct.html
+++ b/chat/templates/chat/chat-direct.html
@@ -24,10 +24,15 @@
 
         <!-- Template CSS -->
         <link rel="stylesheet" href="{% static 'chat/assets/css/template.bundle.css' %}">
-        <link rel="stylesheet" href="{% static 'chat/assets/css/template.light.bundle.css' %}" media="(prefers-color-scheme: light)">
+        <!-- <link rel="stylesheet" href="{% static 'chat/assets/css/template.light.bundle.css' %}"> -->
         <style>
             .form-check {
                 margin-left: 0.5em;
+            }
+            .avatar-img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
             }
         </style>
 
@@ -101,16 +106,18 @@
             <!-- Navigation -->
             <nav class="navigation d-flex flex-column text-center navbar navbar-light hide-scrollbar">
                 <!-- Brand -->
-                <a href="index.html" title="Messenger" class="d-none d-xl-block mb-6">
-                    <svg version="1.1" width="46px" height="46px" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 46 46" enable-background="new 0 0 46 46" xml:space="preserve">
-                        <polygon opacity="0.7" points="45,11 36,11 35.5,1 "/>
-                        <polygon points="35.5,1 25.4,14.1 39,21 "/>
-                        <polygon opacity="0.4" points="17,9.8 39,21 17,26 "/>
-                        <polygon opacity="0.7" points="2,12 17,26 17,9.8 "/>
-                        <polygon opacity="0.7" points="17,26 39,21 28,36 "/>
-                        <polygon points="28,36 4.5,44 17,26 "/>
-                        <polygon points="17,26 1,26 10.8,20.1 "/>
-                    </svg>
+                <a href="/chat" title="Messenger" class="d-none d-xl-block mb-6">
+<!--                    <svg version="1.1" width="46px" height="46px" fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 46 46" enable-background="new 0 0 46 46" xml:space="preserve">-->
+<!--                        <polygon opacity="0.7" points="45,11 36,11 35.5,1 "/>-->
+<!--                        <polygon points="35.5,1 25.4,14.1 39,21 "/>-->
+<!--                        <polygon opacity="0.4" points="17,9.8 39,21 17,26 "/>-->
+<!--                        <polygon opacity="0.7" points="2,12 17,26 17,9.8 "/>-->
+<!--                        <polygon opacity="0.7" points="17,26 39,21 28,36 "/>-->
+<!--                        <polygon points="28,36 4.5,44 17,26 "/>-->
+<!--                        <polygon points="17,26 1,26 10.8,20.1 "/>-->
+<!--                    </svg>-->
+
+                    <img src="{% static 'images/logo/color-logo.png' %}" style="width: 50px;object-fit: cover;">
 
                 </a>
 
@@ -136,7 +143,7 @@
                     </li> -->
 
                     <!-- New chat -->
-                    {% if request.user.is_plan_valid %}
+                    {% if request.user.is_plan_valid and allow_group_creation %}
                     <li class="nav-item">
                         <a class="nav-link py-0 py-lg-8" id="tab-create-chat" href="#tab-content-create-chat" title="Create chat" data-bs-toggle="tab" role="tab">
                             <div class="icon icon-xl">
@@ -160,8 +167,8 @@
                         <a class="nav-link active py-0 py-lg-8" id="tab-chats" href="#tab-content-chats" title="Chats" data-bs-toggle="tab" role="tab">
                             <div class="icon icon-xl icon-badged">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
-                                <div class="badge badge-circle bg-primary">
-                                    <span>4</span>
+                                <div class="badge badge-xs badge-circle bg-primary">
+                                    <span></span>
                                 </div>
                             </div>
                         </a>
@@ -194,7 +201,7 @@
                         <!-- <a href="#" class="nav-link p-0 mt-lg-2" data-bs-toggle="modal" data-bs-target="#modal-sender"> -->
                         <a  href="{% url 'user:profile' %}" class="nav-link p-0 mt-lg-2">
                             <div class="avatar avatar-online avatar-md p-2">
-                                <img src="{{ request.user.profile_image.url }}" alt="#" class="avatar-img">
+                                <img src="{{ request.user.profile_image.url }}" alt="#" class="avatar-img" style="object-fit: cover;">
                             </div>
                             <!-- <div class="avatar avatar-online avatar-xs d-xl-none">
                                 <img class="avatar-img" src="{{ request.user.profile_image.url }}" alt="">
@@ -676,7 +683,7 @@
             <!-- Sidebar -->
 
             <!-- Chat -->
-            <main class="main is-visible" data-dropzone-area="">
+            <main class="main" data-dropzone-area="">
 
                 <div class="container h-100" style="display: none;" id="chat-panel-show-id">
 
@@ -703,14 +710,14 @@
                                                     <div class="avatar avatar-online d-none d-xl-inline-block">
 
                                                         <a href="#" id="setReceiverModal" class="avatar avatar-sm" data-bs-toggle="modal" data-bs-target="#modal-receiver">
-                                                            <img class="avatar-img" id="chatPanel-image" alt="#" src="">
+                                                            <img class="avatar-img" style="object-fit: cover;" id="chatPanel-image" alt="#" src="">
                                                         </a>
 
                                                     </div>
                                                 </div>
 
                                                 <div class="col overflow-hidden">
-                                                    <h5 class="text-truncate" id="chatPanel-username">Ollie Chandler</h5>
+                                                    <h5 class="text-truncate" id="chatPanel-username"></h5>
 {#                                                    <p class="text-truncate">is typing<span class='typing-dots'><span>.</span><span>.</span><span>.</span></span></p>#}
                                                 </div>
                                             </div>
@@ -720,6 +727,28 @@
                                         <!-- Toolbar -->
                                         <div class="col-xl-6 d-none d-xl-block">
                                             <div class="row align-items-center justify-content-end gx-6">
+                                                <div class="col-auto d-none">
+                                                    <form id="video_call_form" method="post" action="{% url 'chat:video-call' %}">
+                                                        <input type="hidden" name="group_id" value="" id="set_group_id_for_video">
+                                                        {% csrf_token %}
+                                                        <button type="submit" class="btn btn-sm btn-primary py-3 px-4" title="Start Video Call">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg>
+                                                        </button>
+                                                    </form>
+                                                </div>
+                                                
+
+                                                <div class="col-auto d-none">
+                                                    <form id="audio_call_form" method="post" action="{% url 'chat:audio-call' %}">
+                                                        <input type="hidden" name="group_id" value="" id="set_group_id_for_audio">
+                                                        {% csrf_token %}
+                                                        <button type="submit" class="btn btn-sm btn-primary py-3 px-4" title="Start Audio Call">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+                                                        </button>
+                                                    </form>
+                                                </div>
+                                                
+
                                                 <div class="col-auto">
                                                     <a href="#" class="icon icon-lg text-muted" data-bs-toggle="offcanvas" data-bs-target="#offcanvas-more" aria-controls="offcanvas-more">
                                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-horizontal"><circle cx="12" cy="12" r="1"></circle><circle cx="19" cy="12" r="1"></circle><circle cx="5" cy="12" r="1"></circle></svg>
@@ -731,12 +760,12 @@
                                                 <div class="col-auto">
                                                     <div class="avatar-group">
                                                         <a href="#" class="avatar avatar-sm" data-bs-toggle="modal" data-bs-target="#modal-sender">
-                                                            <img class="avatar-img" id="sender_img_preview_id"  alt="#">
+                                                            <img class="avatar-img" style="object-fit: cover;" id="sender_img_preview_id"  alt="#">
                                                         </a>
 
 
                                                         <a href="#" class="avatar avatar-sm" data-bs-toggle="modal" data-bs-target="#modal-sender">
-                                                            <img class="avatar-img" id="receiver_img_preview_id" alt="#">
+                                                            <img class="avatar-img" style="object-fit: cover;" id="receiver_img_preview_id" alt="#">
                                                         </a>
 
                                                     </div>
@@ -1015,7 +1044,7 @@
         <!-- Layout -->
 
 {#############################     Modal Invoke while uploading media     ################################}
-<div class="modal fade" id="modalForUploadingData" tabindex="-1" role="dialog" aria-labelledby="Loading Modal" aria-hidden="true">
+<!-- <div class="modal fade" id="modalForUploadingData" tabindex="-1" role="dialog" aria-labelledby="Loading Modal" aria-hidden="true">
     <div class="modal-dialog" role="document">
        <div class="modal-content">
           <div class="modal-header">
@@ -1052,7 +1081,7 @@
           </div>
        </div>
     </div>
- </div>
+ </div> -->
 {#############################    End Modal Invoke while uploading media     ################################}
 
         {% include 'chat/modal.html' %}
