--- a/chat/templates/chat/offcanvas.html
+++ b/chat/templates/chat/offcanvas.html
@@ -19,6 +19,22 @@
             </a>
 
             <ul class="dropdown-menu">
+                <li onclick="$('#video_call_form').submit()">
+                    <a href="#" class="dropdown-item d-flex align-items-center">
+                        Video Call
+                        <div class="icon ms-auto">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg>
+                        </div>
+                    </a>
+                </li>
+                <li onclick="$('#audio_call_form').submit()">
+                    <a href="#" class="dropdown-item d-flex align-items-center">
+                        Audio Call
+                        <div class="icon ms-auto">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-phone"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
+                        </div>
+                    </a>
+                </li>
                 <li data-bs-toggle="modal" data-bs-target="#modal-group">
                     <a href="#" class="dropdown-item d-flex align-items-center">
                         Edit Group
@@ -58,7 +74,7 @@
             <div class="row gy-6">
                 <div class="col-12">
                     <div class="avatar avatar-xl mx-auto">
-                        <img src="" id="offcanvas_profile_img_url" class="avatar-img">
+                        <img src="" id="offcanvas_profile_img_url" class="avatar-img" style="object-fit: cover;">
 
                         <!-- <a href="#" class="badge badge-lg badge-circle bg-primary text-white border-outline position-absolute bottom-0 end-0">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus"><line x1="12" y1="5" x2="12" y2="19"></line><line x1="5" y1="12" x2="19" y2="12"></line></svg>
