--- a/chat/templates/chat/settings.html
+++ b/chat/templates/chat/settings.html
@@ -10,7 +10,7 @@
                                     </div>
 
                                     <!-- Search -->
-                                    <div class="mb-6">
+                                    <!-- <div class="mb-6">
                                         <form action="#">
                                             <div class="input-group">
                                                 <div class="input-group-text">
@@ -22,7 +22,7 @@
                                                 <input type="text" class="form-control form-control-lg ps-0" placeholder="Search messages or users" aria-label="Search for messages or users...">
                                             </div>
                                         </form>
-                                    </div>
+                                    </div> -->
 
                                     <!-- Profile -->
                                     <div class="card border-0">
@@ -30,7 +30,7 @@
                                             <div class="row align-items-center gx-5">
                                                 <div class="col-auto">
                                                     <div class="avatar">
-                                                        <img src="{{ request.user.profile_image.url }}" alt="#" class="avatar-img">
+                                                        <img src="{{ request.user.profile_image.url }}" alt="#" class="avatar-img" style="object-fit:cover;">
 
                                                         <div class="badge badge-circle bg-secondary border-outline position-absolute bottom-0 end-0">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-image"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><circle cx="8.5" cy="8.5" r="1.5"></circle><polyline points="21 15 16 10 5 21"></polyline></svg>
@@ -43,13 +43,13 @@
                                                     <h5>{{ request.user.first_name }} {{ request.user.last_name }}</h5>
                                                     <p>{{ request.user.email }}</p>
                                                 </div>
-                                                <div class="col-auto">
+                                                <!-- <div class="col-auto">
                                                     <a href="#" class="text-muted">
                                                         <div class="icon">
                                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-log-out"><path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"></path><polyline points="16 17 21 12 16 7"></polyline><line x1="21" y1="12" x2="9" y2="12"></line></svg>
                                                         </div>
                                                     </a>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
@@ -121,7 +121,7 @@
                                                         </div>
                                                     </div>
 
-                                                    <div class="accordion-item">
+                                                    <!-- <div class="accordion-item">
                                                         <div class="accordion-header" id="accordion-profile-2">
                                                             <a href="#" class="accordion-button text-reset collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-profile-body-2" aria-expanded="false" aria-controls="accordion-profile-body-2">
                                                                 <div>
@@ -151,7 +151,7 @@
                                                                 <button type="button" class="btn btn-block btn-lg btn-primary w-100">Save</button>
                                                             </div>
                                                         </div>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                         </div>
@@ -159,14 +159,13 @@
                                     <!-- Account -->
 
                                     <!-- Security -->
-                                    <div class="mt-8">
+                                    <!-- <div class="mt-8">
                                         <div class="d-flex align-items-center my-4 px-6">
                                             <small class="text-muted me-auto">Security</small>
                                         </div>
 
                                         <div class="card border-0">
                                             <div class="card-body py-2">
-                                                <!-- Accordion -->
                                                 <div class="accordion accordion-flush" id="accordion-security">
                                                     <div class="accordion-item">
                                                         <div class="accordion-header" id="accordion-security-1">
@@ -202,8 +201,7 @@
                                                         </div>
                                                     </div>
 
-                                                    <!-- Switch -->
-                                                    <!-- <div class="accordion-item">
+                                                    <div class="accordion-item">
                                                         <div class="accordion-header">
                                                             <div class="row align-items-center">
                                                                 <div class="col">
@@ -218,11 +216,11 @@
                                                                 </div>
                                                             </div>
                                                         </div>
-                                                    </div> -->
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <!-- Security -->
 
 
@@ -230,7 +228,7 @@
 
 
                                     <!-- Devices -->
-                                    <div class="mt-8">
+                                    <!-- <div class="mt-8">
                                         <div class="d-flex align-items-center my-4 px-6">
                                             <small class="text-muted me-auto">Devices</small>
 
@@ -272,7 +270,7 @@
                                             </div>
                                         </div>
 
-                                    </div>
+                                    </div> -->
                                     <!-- Devices -->
 
                                 </div>
