--- a/chat/templates/chat/tab_content_chats.html
+++ b/chat/templates/chat/tab_content_chats.html
@@ -11,7 +11,7 @@
 
                                     <!-- Search -->
                                     <div class="mb-6">
-                                        <form action="#">
+                                        <form method="" onsubmit="event.preventDefault()">
                                             <div class="input-group">
                                                 <div class="input-group-text">
                                                     <div class="icon icon-lg">
@@ -19,7 +19,18 @@
                                                     </div>
                                                 </div>
 
-                                                <input type="text" class="form-control form-control-lg ps-0" placeholder="Search messages or users" aria-label="Search for messages or users...">
+                                                <input  id="search-input-chats" 
+                                                        oninput="startSearchQuery(event, this.value, 'contact-list-left-panel', 'receiver_', 'group_receiver_')" 
+                                                        type="text" class="form-control form-control-lg ps-0" placeholder="Search users" aria-label="Search users">
+                                                <script>
+                                                    let queryTimer;
+                                                    function startSearchQuery(event, query, searchWrapperId, serachUserItemId, serachGroupItemId=null) {
+                                                        clearTimeout(queryTimer);
+                                                        queryTimer = setTimeout(() => {
+                                                            searchUsersAndGroups(event, query.toLowerCase(), searchWrapperId, serachUserItemId, serachGroupItemId);
+                                                        }, 1000);
+                                                    }
+                                                </script>
                                             </div>
                                         </form>
                                     </div>
@@ -46,14 +57,17 @@
                                                 <div class="row gx-5">
                                                     <div class="col-auto">
                                                         <div class="avatar avatar-online">
-                                                            <img {% if object.profile_image %}src="{{ object.profile_image.url }}"{% endif %}  alt="#" class="avatar-img">
+                                                            <img {% if object.profile_image %}src="{{ object.profile_image.url }}"{% endif %}  alt="#" style="object-fit: cover;" class="avatar-img">
                                                         </div>
                                                     </div>
 
                                                     <div class="col">
-                                                        <div class="d-flex align-items-center mb-3">
-                                                            <h5 class="me-auto mb-0">{{ object.username }}</h5>
-                                                            <span class="text-muted extra-small ms-2">08:35 PM</span>
+                                                        <div class="d-flex align-items-center justify-content-between mb-3">
+                                                            <div class="">
+                                                                <h5 data-search='full_name' class="me-auto mb-0">{{ object.get_full_name }}</h5>
+                                                                <h6 data-search='username' class="text-muted me-auto mb-0">{{ object.username }}</h6>
+                                                            </div>
+                                                            <span class="text-muted extra-small ms-2 align-self-start">08:35 PM</span>
                                                         </div>
 
                                                         <div class="d-flex align-items-center" id="chat_notification_{{ object.id }}">
@@ -78,13 +92,13 @@
                                                 <div class="row gx-5">
                                                     <div class="col-auto">
                                                         <div class="avatar avatar-online">
-                                                            <img {% if object.profile_image %}src="{{ object.profile_image.url }}"{% endif %}  alt="#" class="avatar-img">
+                                                            <img {% if object.profile_image %}src="{{ object.profile_image.url }}"{% endif %}  alt="#"  style="object-fit: cover;" class="avatar-img">
                                                         </div>
                                                     </div>
 
                                                     <div class="col">
                                                         <div class="d-flex align-items-center mb-3">
-                                                            <h5 class="me-auto mb-0">{{ object.group_name }}</h5>
+                                                            <h5 data-search='groupname' class="me-auto mb-0">{{ object.group_name }}</h5>
                                                             <span class="text-muted extra-small ms-2">08:35 PM</span>
                                                         </div>
 
@@ -110,7 +124,7 @@
                                         
                                         {% if not group_list.exists and not contact_list.exists %}
                                             <div class="d-flex align-items-center justify-content-center">
-                                                <img src="{% static 'chat/img/find_connections.svg' %}" class="w-100" style="margin-top: 5rem;" alt="">
+                                                <img src="{% static 'chat/img/find_connections.svg' %}" class="w-100" style="margin-top: 5rem; max-width: 320px;" alt="">
                                             </div>
                                             <div class="d-flex flex-column mx-auto align-items-center">
                                                 <h5 style="margin-top: 3rem;">Currently you have no connections!</h5>
