--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -50,7 +50,16 @@
     <!-- Google Font -->
     <style>
         @import url('https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700|Muli:200,300,400,500,600,700,800,900|Poppins:100,200,300,400,500,600,700,800,900|Roboto:100,300,400,500,700,900|Rubik:300,400,500,700,900');
-    </style>
+
+.hljs-type, .hljs-title, .hljs-section, .hljs-attribute, .hljs-quote, .hljs-built_in, .hljs-builtin-name{
+       color: #3f88e3;
+    }
+
+    .hljs-keyword, .hljs-selector-tag, .hljs-literal{
+      color: #f39200;
+    }
+
+</style>
 
     <!-- REVOLUTION SLIDER CSS -->
 <!--    <link rel="stylesheet" type="text/css" href="{% static 'plugins/revolution/revolution/css/revolution.min.css' %}">-->
@@ -73,7 +82,8 @@
                     <div class="container clearfix">
                         <!-- website logo -->
                         <div class="logo-header pt-2 pb-0 mostion">
-                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/logo/stellar-1.jpeg' %}" style="width: 80px;" class="p-0"></a>
+                            <a href="{% url 'home:home' %}" class="dez-page p-0"><img src="{% static 'images/logo/color-logo.png' %}" style="width: 70px;" class="p-0"></a>
+<!--                            <p>Stellar AI</p>-->
                         </div>
                         <!-- nav toggle button -->
                         <button class="navbar-toggler collapsed navicon justify-content-end" type="button"
@@ -89,8 +99,7 @@
 
                                <a class="btn-link btn-search mr-4" href="{% url 'user:login' %}"><span><i class="fa fa-user-o"></i> &nbsp;&nbsp;Login</span></a>
 
-                                <a href="{% url 'user:register' %}"
-                                    class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>
+                                <a href="{% url 'user:register' %}" class="btn outline radius-xl btn-sign btn-aware">Sign up <span></span></a>
 <!--                                <button id="quik-search-btn" type="button" class="btn-link btn-search text-secondry"><i-->
 <!--                                        class="fa fa-search"></i></button>-->
                             </div>
@@ -121,9 +130,9 @@
                                 <li><a href="{{path_plan_list}}"><span
                                             class="{% ifequal request.path path_plan_list %}text-primary{% endifequal %}">Plans</span></a>
                                 </li>
-                                <li><a href="{{path_about}}"><span
-                                            class="{% ifequal request.path path_about %}text-primary{% endifequal %}">About</span></a>
-                                </li>
+<!--                                <li><a href="{{path_about}}"><span-->
+<!--                                            class="{% ifequal request.path path_about %}text-primary{% endifequal %}">About</span></a>-->
+<!--                                </li>-->
                                 <!-- <li><a href="#"><span>Protfolio</span></a>
                                     <i class="fa fa-chevron-down"></i>
                                     <ul class="sub-menu">
@@ -226,7 +235,7 @@
                                     <li><a href="{% url 'home:home' %}">Home</a></li>
                                     <li><a href="{% url 'home:about' %}">About us</a></li>
                                     <li><a href="{% url 'home:contact' %}">Contact</a></li>
-                                    <li><a href="{% url 'home:news-letter' %}">Newsletter</a></li>
+<!--                                    <li><a href="{% url 'home:news-letter' %}">Newsletter</a></li>-->
                                 </ul>
                             </div>
                             <div class="mobile-apps">
@@ -273,7 +282,7 @@
                                 <div class="footer-logo">
                                     <a href="{% url 'home:home' %}" class="h3 text-dark dez-page">Stellar Ai</a>
                                 </div>
-                                <p>1nd Floor, No.21, 80-feet Road, Cadarso 19 bis, loft 2 28008 Madrid (USA)</p>
+                                <p>1nd Floor, No.21, 80-feet Road, Cadarso 19 bis, loft 2 28008 Madrid (India)</p>
                             </div>
                         </div>
                     </div>
@@ -283,13 +292,14 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-6 col-md-12 text-left "> <span>Copyright © 2021 Steller AI</span> </div>
+                        <div class="col-lg-6 col-md-12 text-left "> <span>Copyright © 2021 Stellar AI</span> </div>
                         <div class="col-lg-6 col-md-12 text-right ">
                             <div class="widget-link">
                                 <ul>
-                                    <li><a href="javascript:void(0);">Privacy Policy</a></li>
-                                    <li><a href="javascript:void(0);">Customer Support</a></li>
-                                    <li><a href="javascript:void(0);">Careers</a></li>
+                                    <li><a href="{% url 'home:terms' 'privacy-policy' %}">Privacy Policy</a></li>
+                                    <li><a href="{% url 'home:terms' 'terms-and-condition' %}">Terms And Condition</a></li>
+<!--                                    <li><a href="javascript:void(0);">Customer Support</a></li>-->
+<!--                                    <li><a href="javascript:void(0);">Careers</a></li>-->
                                 </ul>
                             </div>
                         </div>
