--- a/home/templates/home/terms_and_condition.html
+++ b/home/templates/home/terms_and_condition.html
@@ -4,18 +4,22 @@
 
 <div class="page-content">
     <!-- inner page banner -->
-    <div class="dlab-bnr-inr" style="background-image:url('{% static 'images/background/bg1.jpg' %}'); background-size: cover; background-position: top center; background-repeat: no-repeat;">
+    <div class="dlab-bnr-inr" style="background-image:url('{% static 'images/background/bg1.jpg' %}'); background-size: cover; background-position: top center; background-repeat: no-repeat;height: 250px;">
         <div class="container">
             <div class="dlab-bnr-inr-entry text-white">
-                <h1>We’re Crep </h1>
-                <p>We help companies we believe in get results. Let us show you how</p>
+                {% if page == "terms-and-condition" %}
+                <h1 class="mt-3">Terms And Condition</h1>
+                {% elif page == "privacy-policy" %}
+                <h1 class="mt-3">Privacy Policy</h1>
+                {% endif %}
+<!--                <p>We help companies we believe in get results. Let us show you how</p>-->
             </div>
         </div>
     </div>
     <!-- inner page banner END -->
     <!-- inner page banner END -->
     <div class="content-block container my-5">
-        {{tpp|safe}}
+      {{tpp|safe}}
     </div>
 </div>
 
