--- a/post/templates/post/feeds.html
+++ b/post/templates/post/feeds.html
@@ -10,6 +10,35 @@
     .hljs-keyword, .hljs-selector-tag, .hljs-literal{
       color: #f39200;
     }
+
+    .flag-modal {
+      /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1000; /* Sit on top */
+      padding-top: 100px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    }
+
+
+   @media screen and (min-width: 270px) {
+      .flag-margin{
+        width: 85%;
+      }
+    }
+
+    @media screen and (min-width: 480px) {
+      .flag-margin{
+        left: 35%;
+        width: 50%;
+      }
+    }
+
 </style>
 
 <div class="view-wrapper">
@@ -405,8 +434,8 @@
                                     <ul>
                                         <li id="question-error" class="is-active">
                                             <a onclick="valSet('question-error', 'category', 'Question/Errors')">
-                                                <span class="icon is-small"><i data-feather="edit-3"></i></span>
-                                                <span>Question/Errors</span>
+                                                <p>&nbsp;&nbsp;&nbsp;&nbsp;<span class="icon is-small"><i class="pt-3" data-feather="edit-3"></i></span></p>
+                                                <span style="padding-right: 2em;">Question/Errors</span>
                                             </a>
                                         </li>
                                         <li id="discussion-informative">
@@ -425,21 +454,18 @@
                                     </ul>
                                 </div>
 
+                                <p id="post_error" align="center" style="display:none;font-size: 13px;background: #FDEDEE;color:red;padding: 0.7em;margin-top: -1.8em;">Please select language and scope of work.</p>
                                 <!-- Tab content -->
                                 <div class="tab-content">
                                     <!-- Compose form -->
+
                                     <div class="compose">
                                         <div class="compose-form">
                                             <a href="../user/profile/">
-                                            {% if user.profile_image %}
-                                            <img src="{{ user.profile_image.url }}" alt="">
-                                            {% else %}
-                                            <img src="https://e7.pngegg.com/pngimages/798/436/png-clipart-computer-icons-user-profile-avatar-profile-heroes-black.png"
-                                                alt="">
-                                            {% endif %}
+                                            <img src="{{ request.user.get_profile_img }}" alt="" style="height: 40px;width: 50px;">
                                             </a>
                                             <div class="control">
-                                                <textarea name="description" id="publish" class="textarea" rows="5"
+                                                <textarea name="description" id="publish" class="textarea" rows="4"
                                                     placeholder="Write description here..."></textarea>
                                             </div>
                                         </div>
@@ -448,9 +474,14 @@
 
                                         </div>
 
+
+
+
                                         <div id="options-summary" class="options-summary"></div>
+                                         <p class="hidden-options" style="font-size: 13px;background: #f5f5f5;padding: 0.7em;margin-top: -1.8em;">Note: write programming code in between two # (e.g # you code #).</p>
 
                                         <div id="tag-suboption" class="is-autocomplete is-suboption is-hidden">
+
                                             <!-- Tag friends suboption -->
                                             <div id="tag-list" class="tag-list"></div>
                                             <div class="control">
@@ -525,7 +556,7 @@
                                                             class="dropdown is-spaced is-modern is-right is-neutral dropdown-trigger">
                                                             <div>
                                                                 <input type="text" name="language" id="language" hidden>
-                                                                <button style="min-width: 220px;" class="button"
+                                                                <button style="min-width: 200px;" class="button"
                                                                     aria-haspopup="true">
                                                                     <!-- <i class="main-icon" data-feather="smile"></i> -->
                                                                     <span id="btn_lang">Options</span>
@@ -565,7 +596,7 @@
                                                             <div>
                                                                 <input type="text" name="scope_of_work"
                                                                     id="scope-of-work" hidden>
-                                                                <button style="min-width: 220px;" class="button"
+                                                                <button style="min-width: 200px;" class="button"
                                                                     aria-haspopup="true">
                                                                     <!-- <i class="main-icon" data-feather="smile"></i> -->
                                                                     <span id="btn_sow">Choose</span>
@@ -620,7 +651,8 @@
                     <div class="no-post"></div>
 
                     <div id="refresh-div">
-                        <div id="flag-reason" class="is-hidden" style="z-index: 1000; width: 50%; position: fixed; top: 30%; left: 25%; border: 2px solid black; background: white; border-radius: 12px;">
+                       <div id="flag-reason" class="is-hidden flag-modal">
+                       <div  class="flag-margin" style="display: block;z-index: 1000;min-width: 320px;max-width: 500px;padding: 20px;margin: 20px;position: fixed; top: 30%;border: 1px solid #44a4a; background: white; border-radius: 12px;">
                             <a onclick="closeFlag()">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
@@ -629,9 +661,9 @@
                                     <line x1="6" y1="6" x2="18" y2="18"></line>
                                 </svg>
                             </a>
-                            <div class="column is-12" style="margin-top: 10px;">
+                            <div class="column is-12">
                                 <div class="field field-group" style="margin-top: 5px;">
-                                    <label>Reason</label>
+                                    <label class="mb-2">Reason</label>
                                     <div class="control has-icon">
                                         <input type="text" class="input is-fade" placeholder="Reason..." name="flag-reason" required>
                                         <div class="form-icon">
@@ -643,7 +675,9 @@
                             </div>
                             <input type="text" name="flag-post-id" hidden>
                         </div>
+                        </div>
                     </div>
+
 
                     <!-- Load more posts -->
                     <div id="load-more-btn" class=" load-more-wrap narrow-top has-text-centered">
@@ -833,6 +867,9 @@
 
 {% endblock content %}
 {% block script %}
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
 <script>
 
 
@@ -976,9 +1013,11 @@
             processData: false,
             success: function (response) {
                 if (response['Status'] === true) {
+                    document.getElementById("post_error").style.display = "none";
                     location.reload();
                 } else {
-                    alert(response['Message']);
+                    document.getElementById("post_error").style.display = "block";
+<!--                    alert(response['Message']);-->
                 }
             },
             error: function (response) {
