--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -24,7 +24,7 @@
                                     <i data-feather="plus"></i>
                                 </div>
                                 {% endif %}
-                                <div class="pop-button is-far-left has-tooltip modal-trigger" data-modal="change-profile-pic-modal" data-placement="right" data-title="Change profile picture">
+                                <div class="pop-button is-left has-tooltip modal-trigger" data-modal="change-profile-pic-modal" data-placement="right" data-title="Change profile picture">
                                     <a class="inner">
                                         <i data-feather="camera"></i>
                                     </a>
@@ -35,13 +35,13 @@
 <!--                                        <i class="active-icon" data-feather="bell-off"></i>-->
 <!--                                    </a>-->
 <!--                                </div>-->
-                                <div id="invite-pop" class="pop-button pop-shift is-left has-tooltip" data-placement="top" data-title="Relationship">
+                                <!-- <div id="invite-pop" class="pop-button pop-shift is-left has-tooltip" data-placement="top" data-title="Relationship">
                                     <a href="#" class="inner">
                                         <i class="inactive-icon" data-feather="plus"></i>
                                         <i class="active-icon" data-feather="minus"></i>
                                     </a>
-                                </div>
-                                <div id="chat-pop" class="pop-button is-center has-tooltip" data-placement="top" data-title="Chat">
+                                </div> -->
+                                <div id="chat-pop" class="pop-button is-center has-tooltip" data-placement="right" data-title="Chat">
                                     <a href="{% url 'chat:chat' %}" class="inner">
                                         <i data-feather="message-circle"></i>
                                     </a>
@@ -127,24 +127,30 @@
                                      &nbsp;&nbsp;&nbsp;{{connected_users.count}} Friends
                                 </a>
                             </div>
-                            <div class="subheader-middle" style="margin-top: 4em;">
+                            <div class="subheader-middle" style="margin-top: 3em;">
                                 <h2>{{profile_user.get_full_name}}</h2>
                                 <span>{{profile_user.username}}</span>
                             </div>
-                            <div class="subheader-end is-hidden-mobile">
-                                {% if profile_user in connected_users %}
-                                <a class="button has-icon is-bold menu-item" style="min-width: 130px;background: #5596e6;color: #fff;" data-content="education-content">
-                                    <i class="mdi mdi-progress-check"></i>
-                                      &nbsp;&nbsp;&nbsp;Send Request
-                                </a>
+                            <div class="subheader-end is-hidden-mobile" style="display: flex; justify-content: end;">
+                                {% if profile_user not in request.user.get_user_connected_users and profile_user != request.user %}
+                                <form method="POST" onsubmit="sendFriendRequest(event)" action="">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="id" value="{{profile_user.id}}">
+                                    <button type="submit" class="button has-icon is-bold menu-item" style="min-width: 130px;background: #5596e6;color: #fff;" data-content="education-content">
+                                        <i class="mdi mdi-send"></i>
+                                        &nbsp;&nbsp;&nbsp;Send Request
+                                    </button>
+                                </form>
+                                {% elif profile_user == request.user %}
+                                <!-- If profile_user is request.user -->
                                 {% else %}
-                                 <a class="button has-icon is-bold menu-item" style="min-width: 130px;background: #5596e6;color: #fff;" data-content="education-content">
-                                    <i class="mdi mdi-progress-check"></i>
+                                 <a href="{% url 'chat:chat' %}" class="button has-icon is-bold menu-item" style="min-width: 130px;background: #5596e6;color: #fff;" data-content="education-content">
+                                    <i class="mdi mdi-message"></i>
                                       &nbsp;&nbsp;&nbsp;Send Message
                                 </a>
                                 {% endif %}
                                 {% if form.designation.value %}
-                                <a class="button has-icon is-bold menu-item" style="min-width: 130px;" data-content="education-content">
+                                <a class="button has-icon is-bold menu-item" style="min-width: 130px; margin-left: 20px;" data-content="education-content">
                                     <i class="mdi mdi-progress-check"></i>
                                       &nbsp;&nbsp;&nbsp;{{form.designation.value}}
                                 </a>
@@ -168,14 +174,14 @@
                                     </div>
                                 </div>
 
-                                {% if not user_friend %}
+
                                 <div class="menu-item" data-content="personal-content">
                                     <div class="menu-icon">
                                         <i class="mdi mdi-account-group"></i>
                                         <span>Friends</span>
                                     </div>
                                 </div>
-                                {% endif %}
+
 <!--                                <div class="menu-item" data-content="personal-content-list">-->
 <!--                                    <div class="menu-icon">-->
 <!--                                        <i class="mdi mdi-account-box-multiple"></i>-->
@@ -1587,9 +1593,9 @@
 <!--                            </div>-->
 <!--                        </div>-->
 <!--                    </div>-->
-                    <div class="card-footer">
+                    <!-- <div class="card-footer">
                         <button class="button is-solid accent-button replace-button is-disabled">Use Picture</button>
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
@@ -1599,37 +1605,38 @@
         <div id="upload-crop-profile-modal" class="modal upload-crop-profile-modal is-xsmall has-light-bg">
             <div class="modal-background"></div>
             <div class="modal-content">
-
-                <div class="card">
-                    <div class="card-heading">
-                        <h3>Upload Picture</h3>
-                        <!-- Close X button -->
-                        <div class="close-wrap">
-                            <span class="close-modal">
-                                    <i data-feather="x"></i>
-                                </span>
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <label class="profile-uploader-box" for="upload-profile-picture">
-                            <span class="inner-content">
-                                    <img src="{% static 'social_assets/img/illustrations/profile/add-profile.svg' %}" alt="">
-                                    <span>Click here to <br>upload a profile picture</span>
-                            </span>
-                            <input type="file" id="upload-profile-picture" accept="image/*">
-                        </label>
-                        <div class="upload-demo-wrap is-hidden">
-                            <div id="upload-profile"></div>
-                            <div class="upload-help">
-                                <a id="profile-upload-reset" class="profile-reset is-hidden">Reset Picture</a>
+                <form method="POST" action="{% url 'user:update-profile-image' request.user.id %}" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="card">
+                        <div class="card-heading">
+                            <h3>Upload Picture</h3>
+                            <!-- Close X button -->
+                            <div class="close-wrap">
+                                <span class="close-modal">
+                                        <i data-feather="x"></i>
+                                    </span>
                             </div>
                         </div>
-                    </div>
-                    <div class="card-footer">
-                        <button id="submit-profile-picture" class="button is-solid accent-button is-fullwidth raised is-disabled">Use Picture</button>
-                    </div>
-                </div>
+                        <div class="card-body">
+                            <label class="profile-uploader-box" for="upload-profile-picture">
+                                    <img src="{% static 'social_assets/img/illustrations/profile/add-profile.svg' %}" id="update-preview-image" style="object-fit: cover; object-position: center; width: 100%; height: 100%;" alt="">
+                                    <input type="file" name="profile_image" id="upload-profile-picture" accept="image/*">
+                            </label>
+                            <div class="d-block ml-auto mr-auto my-2">Click above to upload a profile picture.</div>
 
+                            <!-- <div class="upload-demo-wrap is-hidden">
+                                <div id="upload-profile">
+                                </div>
+                                <div class="upload-help">
+                                    <a id="profile-upload-reset" class="profile-reset is-hidden">Reset Picture</a>
+                                </div>
+                            </div> -->
+                        </div>
+                        <div class="card-footer">
+                            <button id="submit-profile-picture" class="button is-solid accent-button is-fullwidth raised">Use Picture</button>
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
         <!-- Cover image crop modal -->
@@ -1673,6 +1680,13 @@
 <!--        </div>-->
     </div>
 
+<script>
+    $(document).ready(function(){
+        morePost();
+        moreFriends();
+        moreBookmarkPost();
+    });
+</script>
 
 <script>
     function like(id) {
@@ -1694,6 +1708,22 @@
         });
     }
 
+    // Shows image preview after uploading.
+    let oldImage = null;
+    previewEl = document.getElementById('update-preview-image');
+    document.getElementById('upload-profile-picture').addEventListener('change', function(e){
+        const file = e.target.files[0];
+        if (oldImage !== null) {
+            URL.revokeObjectURL(oldImage)
+            previewEl.style.display = 'none';
+        }
+        if (file){
+            oldImage = URL.createObjectURL(file)
+            previewEl.src = oldImage;
+            previewEl.style.display = 'inline-block';
+        }
+
+    });
 </script>
 
 {% endblock %}
